# Queen-Spy

./: .gitignore  README.md  api.py  command_add_link.py  command_clan_list.py  command_clan_update.py  command_discord_list.py  command_discord_update.py  command_link_add.py  command_link_list.py  command_link_remove.py  command_link_update.py  command_status.py  command_update_discord.py  command_waitinglist_add.py  command_waitinglist_list.py  command_waitinglist_remove.py  comment.cs  data_clan.json  data_clan_Dair.json  data_clan_Iratus niggas.json  data_clan_Skyward.json  data_clan_skyward.json  data_clan_🌸Blossom🌸.json  data_discord.json  data_discord_Dair.json  data_discord_Iratus niggas.json  data_discord_Skyward.json  data_discord_skyward.json  data_discord_🌸Blossom🌸.json  data_link.json  data_link_Dair.json  data_link_Iratus niggas.json  data_link_Skyward.json  data_link_skyward.json  data_link_🌸Blossom🌸.json  data_waitinglist.json  keep_alive.py  main.py  pyproject.toml  (+1 more)
classes/: DiscordAccount.py
commands/: command_clan_list.py  command_clan_update.py  command_discord_list.py  command_discord_update.py  command_link_add.py  command_link_list.py  command_link_remove.py  command_link_update.py  command_status.py  command_waitinglist_list.py
data/: data_link_Dair.json  data_link_Pandation.json
modules/: assign.py
