[tool.poetry]
name = "repl_python3_Queen-Spy"
version = "0.1.0"
description = ""
authors = ["KaanGogcay <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
config = "^0.5.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
